picture of new car

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus modi voluptatum atque quasi nisi aperiam delectus, quaerat, cum porro deserunt ullam! Esse non sapiente, doloremque repellendus magni suscipit molestiae excepturi!
+
+    <div>
+        <h3>I've bought a new car</h3>
+        <img src="images/racing car.jpg" alt="It's a new racing car">
+    </div>
 </body>
 </html>
